overflow fixed

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ textarea {
     border: .5px solid black;
     background-color: white;
     font-size: larger;
+    overflow: auto;
 }
 .head {
     display: block;
